Include html, css validation images in testing.md #55

--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -27,7 +27,11 @@
 
 {% blocktrans %}
 <div  class="form-text text-center mt-2 mb-5 text-dark">Already have an account? <a href="{{ login_url }}" class="text-dark fw-bold"> Sign In</a>
+
   {% endblocktrans %}
+
+</div>
+
 
 {% endblock %}
 
