--- a/profiles/templates/includes/confirm_modal.html
+++ b/profiles/templates/includes/confirm_modal.html
@@ -29,7 +29,7 @@
 
         <form method="POST" action="{% url 'remove_subscription' %}">
           {% csrf_token %}
-          <input type="hidden" name="redirect_url" value="{{ request.path }}" />
+          <input type="hidden" name="redirect_url" value="{{ request.path }}" >
           <button class="btn btn-danger" type="submit" name="delete_item">
             <i class="fa-solid fa-trash"></i> Cancel Membership
           </button>
