--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
               Copyright &copy; Your CiSwag 2024
             </div>
             <div>
-              <a class="link-light small" href="#">Privacy</a>
+              <a class="link-light small" href="{% url "privacy" %}">Privacy</a>
               <span class="text-white mx-1">&middot;</span>
               <a class="link-light small" href="mailto:ciswag@gmail.com">Contact Us</a>
             </div>
