Update static images to webp format #55

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -40,7 +40,7 @@
         <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
           <img
             class="img-fluid rounded-3 my-5"
-            src="{% static 'images/hero-image.jpg' %}"
+            src="{% static 'images/hero-image.webp' %}"
             alt="hero image of CI Swag store items"
           >
         </div>
