--- a/home/templates/includes/carousel.html
+++ b/home/templates/includes/carousel.html
@@ -33,7 +33,7 @@
     >
       <div class="img-box">
         <img
-          src="{% static 'images/person1.jpg' %}"
+          src="{% static 'images/person1.webp' %}"
           alt="testimonial person 1"
         >
       </div>
@@ -66,7 +66,7 @@
     <div class="carousel-item text-center item-center py-2 text-light pb-5">
       <div class="img-box">
         <img
-          src="{% static 'images/person2.jpg' %}"
+          src="{% static 'images/person2.webp' %}"
           alt="testimonial person 2"
         >
       </div>
@@ -99,7 +99,7 @@
     <div class="carousel-item text-center item-center py-2 text-light pb-5">
       <div class="img-box">
         <img
-          src="{% static 'images/person3.jpg' %}"
+          src="{% static 'images/person3.webp' %}"
           alt="testimonial person 3"
         >
       </div>
