Add loading lazy to home images #55

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -16,7 +16,7 @@
         <div class="col-lg-8 col-xl-7 col-xxl-6">
           <div class="my-5 text-center text-xl-start">
             <h1 class="display-5 fw-bolder text-white mb-2">CI SWAG STORE</h1>
-            <p class="lead fw-normal text-white-50 mb-4">
+            <p class="lead text-white-50 mb-4">
               CI Swag Store, where fashion meets knowledge. Our store not only
               offers stylish branded gear but also provides short
               instructional courses, enriching students with skills and
@@ -246,6 +246,7 @@
                         border-radius: 4px;
                       "
                       ><img
+                      loading="lazy"
                         class="refferal_badge"
                         src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
                         alt="Intuit Mailchimp"
