--- a/home/templates/includes/carousel.html
+++ b/home/templates/includes/carousel.html
@@ -35,6 +35,7 @@
         <img
           src="{% static 'images/person1.webp' %}"
           alt="testimonial person 1"
+          loading="lazy"
         >
       </div>
       <h3 class="h4 mt-1">Cozy Knit Jumper</h3>
@@ -68,6 +69,8 @@
         <img
           src="{% static 'images/person2.webp' %}"
           alt="testimonial person 2"
+          loading="lazy"
+
         >
       </div>
       <h3 class="h4 mt-1">Mastering Flexbox and Grid Layouts</h3>
@@ -101,6 +104,8 @@
         <img
           src="{% static 'images/person3.webp' %}"
           alt="testimonial person 3"
+          loading="lazy"
+
         >
       </div>
       <h3 class="h4 mt-1">Stress Relief Ball</h3>
