Link forgot password allauth template

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -47,10 +47,14 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 </form>
 
   {% blocktrans %}
-  <div class="form-text text-center mt-2 mb-5 text-dark">Not
-  Registered? <a href="{{ signup_url }}" class="text-dark fw-bold"> Create an
+  <div class="form-text  text-center mt-2 text-dark">Not
+  Registered? <a href="{{ signup_url }}" class="link-dark fw-bold"> Create an
     Account</a>
-    {% endblocktrans %}
+{% endblocktrans %}
+
 </div>
 
+
+<div class="form-text  text-center mt-2 mb-5 text-dark">Forgot Password? <a href="{% url 'account_reset_password' %}" class="link-primary fw-bold"> Reset Password</a>
+</div>
 {% endblock %}
