--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -14,5 +14,10 @@
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.</p>
+    {% endblocktrans %}
+
+   <a href="{% url "account_login" %}" class='btn btn-outline-primary'> Sign In</a>
+    
+      
 {% endblock %}
