Update testing.md with stripe images #55

--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -71,10 +71,12 @@
               {% elif program.difficulty == 2 %}
               <i class="fa-solid fa-gauge-high text-warning"></i>
               Difficulty
+            </div>
               <span>Intermediate</span>
               {% else %}
               <i class="fa-solid fa-gauge-high text-danger"></i>
               Difficulty
+            </div>
               <span>Advanced</span>
               {% endif %}
             </div>
