--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -11,11 +11,12 @@
 
 {% block page_header %}
 <header class="bg-dark">
-  <div class="container px-4 px-lg-5 my-5">
+  <div class="container px-4 px-lg-5 my-4 my-lg-5">
     <div class="text-center text-white">
       <h1 class="display-4 fw-bolder">Expand your knowledge</h1>
       <p class="lead fw-normal text-white-50 mb-0">
         Gain a deeper understainding with our supplementary courses
+        
       </p>
     </div>
   </div>
