--- a/templates/base.html
+++ b/templates/base.html
@@ -82,21 +82,17 @@
         <div
           class="row align-items-center justify-content-between flex-column flex-sm-row"
         >
-          <div class="col-auto">
+          <div class="col-auto text-center text-lg-start">
             <div class="small m-0 text-white mb-2">
               Copyright &copy; Your CiSwag 2024
             </div>
-            <div>
-              <a class="link-light small" href="{% url "privacy" %}">Privacy</a>
-              <span class="text-white mx-1">&middot;</span>
-              <a class="link-light small" href="mailto:ciswag@gmail.com">Contact Us</a>
-            </div>
+            <a class="link-light small mb-3" href="{% url "privacy" %}">Privacy</a>
           </div>
           <div class="col-auto">
             <!-- Email Developer -->
             <a
                   class="btn btn-outline-light m-1"
-                  href="mailto:darrachb1991@gmail.com"
+                  href="mailto:darrachbarneveld91@gmail.com"
                   role="button"
                   aria-label="Email the developer"
 
