--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -12,7 +12,7 @@
 
 {% block page_header %}
 <header class="bg-dark">
-    <div class="container px-4 px-lg-5 my-5">
+    <div class="container px-3 px-lg-5 my-4 my-lg-5">
       <div class="text-center text-white">
         <h1 class="display-4 fw-bolder">Checkout</h1>
         <p class="lead fw-normal text-white-50 mb-0">
@@ -29,7 +29,7 @@
 
 {% block content %}
     <section class="container p-0">
-      <div class="row">
+      <div class="row m-0">
         <div class="col-xl-8">
           <div class="card">
             <div class="card-body">
