--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -6,7 +6,7 @@
 
 {% block page_header %}
 <header class="bg-dark">
-  <div class="container px-4 px-lg-5 my-5">
+  <div class="container px-4 px-lg-5 my-4 my-lg-5">
     <div class="text-center text-white">
       <h1 class="display-4 fw-bolder">Shop in style</h1>
       <p class="lead fw-normal text-white-50 mb-0">
