--- a/profiles/templates/profiles/my_courses.html
+++ b/profiles/templates/profiles/my_courses.html
@@ -13,7 +13,7 @@
 {% load static %}
 {% block page_header %}
 <header class="bg-dark">
-  <div class="container px-4 px-lg-5 my-5">
+  <div class="container px-4 px-lg-5 my-4 my-lg-5">
     <div class="text-center text-white">
       <h1 class="display-4 fw-bolder">Your Courses</h1>
     </div>
