--- a/profiles/templates/profiles/subscriptions.html
+++ b/profiles/templates/profiles/subscriptions.html
@@ -11,7 +11,7 @@
 
 {% block page_header %}
 <header class="bg-dark">
-  <div class="container px-4 px-lg-5 my-5">
+  <div class="container px-4 px-lg-5 my-4 my-lg-5">
     <article class="text-center text-white">
       <h1 class="display-4 fw-bolder">Subscriptions</h1>
       {% if request.user.profile.active_subscription %}
@@ -34,7 +34,7 @@
 
         {% for subscription in subscriptions  %}
 
-        <div class="col-sm-4">
+        <div class="col-sm-4 mb-3">
             <div class="subscription card text-center">
                 <div class="header {% if subscription.current %} text-white bg-secondary {% else %} bg-{{subscription.color}} {% endif %}">
                     <h2 class='fw-bolder'>${{subscription.price}} <small>| mo</small></h2>
