--- a/templates/400.html
+++ b/templates/400.html
@@ -8,7 +8,7 @@
 
 {% block page_header %}
 <header class="bg-dark">
-  <div class="container px-4 px-lg-5 my-5">
+  <div class="container px-4 px-lg-5 my-4 my-lg-5">
     <div class="text-center text-white">
       <h1 class="display-4 fw-bolder">400 Error</h1>
     
