--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -8,5 +8,5 @@
     <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
     <hr>
     <p>{% trans 'Your password is now changed.' %}</p>
-    <a href="{{ login_url }}" class='btn btn-outline-primary'>Sign In</a>
+    <a href="{% url 'account_login' %}" class='btn btn-outline-primary'>Sign In</a>
     {% endblock %}
