Update readme with password reset features #53

--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -17,7 +17,7 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <a class="btn btn-outline-dark rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-                <input type="submit" class="btn btn-primary" name="action" value="{% trans 'change password' %}"/>
+                <input type="submit" class="btn btn-primary" name="action" value="{% trans 'Change password' %}"/>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
