Create account deletion modal and logic #70

--- a/cart/templates/includes/cart_item.html
+++ b/cart/templates/includes/cart_item.html
@@ -67,7 +67,7 @@
         min="0"
         max="99"
       >
-      <button type='submit' class="cart-button text-primary">
+      <button type='submit' class="cart-button text-primary border px-2 my-1">
         Update
       </button>
       <input type="hidden" name="redirect_url" value="{{ request.path }}" >
@@ -86,7 +86,7 @@
           {% endif %}
           <button
             type="submit"
-            class="cart-button text-danger"
+            class="cart-button text-danger border px-2"
           >
           Remove
           </button>
