--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -39,7 +39,7 @@
                 <i class="fa-solid fa-user"></i>
               </div>
             </div>
-            <!-- User Form -->
+            <!-- User Account Form -->
             <form action="#" method="POST">
               {% csrf_token %}
               <h2 class="h5 mb-1">User Info</h2>
@@ -77,7 +77,7 @@
                 <i class="fa-solid fa-truck text-white"></i>
               </div>
             </div>
-            <!-- User Profile Form -->
+            <!-- User Delivery Form -->
             <form
               class="mt-3"
               action="#"
@@ -93,14 +93,65 @@
 
                 {{profile_form | crispy}}
               </div>
-         
-
-
-
               <button type="submit" class="my-4 btn btn-primary float-right">
                 Update Delivery
               </button>
             </form>
+          </li>
+
+          <hr>
+          <li class="checkout-item">
+            <div class="avatar checkout-icon p-1">
+              <div class="avatar-title rounded-circle bg-danger">
+                <i class="fa-solid fa-trash text-white"></i>
+              </div>
+            </div>
+
+            <h2 class="h5 mb-1 text-danger">Danger Zone</h2>
+            <p class="text-muted text-truncate mb-4">This action cannot be undone</p>
+            <!-- User Delete Form -->
+            <button
+            type="button"
+            class="btn btn-danger"
+            data-bs-toggle="modal"
+            data-bs-target="#deleteAccountModal"
+          >
+            Delete Account
+          </button>
+          <div
+            class="modal fade"
+            id="deleteAccountModal"
+            tabindex="-1"
+            aria-labelledby="deleteAccountModal"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="deleteAccountModal">Are you sure!?</h5>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">This action cannot be undone!</div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                    Close
+                  </button>
+                  <form method="POST">
+                    {% csrf_token %}
+                    <button class="btn btn-danger" type="submit" name="delete_account">
+                      <i class="fa-solid fa-trash"></i>Confirm Delete
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+          
           </li>
         </ol>
       </div>
