--- a/static/css/base.css
+++ b/static/css/base.css
@@ -272,7 +272,7 @@ a:link {
   font-weight: 400;
   line-height: 1.5;
   color: #545965;
-  margin-block: 0.25rem !important;
+  margin-bottom: 0.25rem !important;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #e2e5e8;
