--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,3 +1,8 @@
+/* CHECKOUT FORM */
+.form-control:disabled {
+  outline: 2px solid var(--primary-green);
+}
+
 /* CHECKOUT ICONS */
 
 .activity-checkout {
