Style add product form #78

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -10,7 +10,7 @@
 
 {% block page_header %}
 <header class="bg-dark">
-  <div class="container px-4 px-lg-5 mt-5 mb-2">
+  <div class="container px-4 px-lg-5 my-4 my-lg-5">
     <div class="text-center text-white">
       <h1 class="display-4 fw-bolder">Update Inventory</h1>
       <p class="lead fw-normal text-white-50 mb-0">
@@ -24,11 +24,23 @@
 
 {% block content %}
     <!-- Product-->
-    <section class="py-3 bg-white">
-      <!-- Heading for accessibility-->
-      <h2>Add Product</h2> 
-
-      {{form | crispy}}
-   
-      </section>
+    <section class="py-3 bg-orange-gradient">
+      <div
+          class="my-4 text-center text-orange w-fit mx-auto px-5 border-bottom border-dark"
+        >
+          <h2 class="text-dark">Add Product</h2>
+          <i class="fa-brands fa-product-hunt h1"></i>
+        </div>
+      
+      <form
+      method="post"
+      enctype="multipart/form-data"
+      class="form-container p-4 rounded-3 mx-auto mb-5 bg-white"
+    >
+      {{ form | crispy }}
+      <!--  -->
+      {% csrf_token %}
+  
+      <button type="submit" class="btn btn-primary my-4">Add Product</button>
+    </form>
 {% endblock %}
