Fixed delete product modal bug

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block extra_title %}Add Product{% endblock %}
+{% block extra_title %}Edit Product{% endblock %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'products/css/products.css' %}">
@@ -51,40 +51,40 @@
         >
         <i class="fa-solid fa-trash"></i>Delete Product
         </button>
-        <div
-        class="modal fade"
-        id="deleteProduct-{{product.id}}"
-        tabindex="-1"
-        aria-labelledby="deleteProduct"
-        aria-hidden="true"
-        >
-        <div class="modal-dialog">
-            <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteProduct">Are you sure!?</h5>
-                <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-                ></button>
-            </div>
-            <div class="modal-body">This action cannot be undone!</div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                Close
-                </button>
-                <form method="post">
-                {% csrf_token %}
-                <input type="hidden" name="item_id" value="{{product.id}}" />
-                <button class="btn btn-danger" type="submit" name="delete_product">
-                    <i class="fa-solid fa-trash"></i>Confirm Delete
-                </button>
-                </form>
-            </div>
-            </div>
-        </div>
-        </div>
-
     </form>
+    <div
+    class="modal fade"
+    id="deleteProduct-{{product.id}}"
+    tabindex="-1"
+    aria-labelledby="deleteProduct"
+    aria-hidden="true"
+    >
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="deleteProduct">Are you sure!?</h5>
+            <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+            ></button>
+        </div>
+        <div class="modal-body">This action cannot be undone!</div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Close
+            </button>
+            <form method="post">
+            {% csrf_token %}
+            <button class="btn btn-danger" type="submit" name="delete_product">
+                <i class="fa-solid fa-trash"></i>Confirm Delete
+            </button>
+            </form>
+        </div>
+        </div>
+    </div>
+    </div>
+  </section>
+
 {% endblock %}
