Fix cart item image renderbug

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -17,7 +17,7 @@
         <h1 class="display-4 fw-bolder">Shopping Cart</h1>
         
         <p class="lead fw-normal text-white-50 mb-0">
-          <i class="text-info font-weight-bold">{{cart_items|length}}</i> type of item in your cart
+          <i class="text-info font-weight-bold">{{cart_items|length}}</i> types of item in your cart
         </p>
 
         {% if  request.user.profile.active_subscription %}
