Include production debug logs on my courses page

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -174,7 +174,7 @@
                       <button type="submit" class="btn btn-success" >Pay Now</button>
 
                       {% else %}
-                      <button type="submit" class="btn btn-primary" name='detail_verify'>Verifiy Delivery</button>
+                      <button type="submit" class="btn btn-primary" name='detail_verify'>Verify Delivery</button>
                       {% endif %}
                  
                     </div>
