--- a/products/templates/includes/product_card.html
+++ b/products/templates/includes/product_card.html
@@ -50,7 +50,7 @@
       </div>
       <!-- Product actions-->
       <div class="p-1 pb-2 p-lg-4 pt-0 text-center">
-          <a class="btn btn-outline-dark mt-auto mb-1" href="{% url "product_detail" product.id %}"
+          <a class="btn btn-outline-dark mt-auto mb-sm-1 mb-md-0" href="{% url "product_detail" product.id %}"
           >View Product</a
         >
        <!-- Edit Product if allowed -->
